--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
 	width: 100%
 }
 
+details > summary {
+	font-size: 1.5em;
+	font-weight: bold;
+}
+
+
 .container {
 	width: 70%;
 	margin: 0 auto;
